--- a/web/templates/hero_templates/index.html
+++ b/web/templates/hero_templates/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="row container">
                     <div class="col-12 col-md-6 ">
-                        <h1 class="h1">Wir helfen dir beim Kauf von Immobilien.</h1>
+                        <h1 class="h1 py-5">Wir helfen dir beim Kauf von Immobilien.</h1>
                         <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur nemo
                             quasi
                             temporibus quibusdam dolores possimus praesentium placeat eius facere aperiam non enim vero
@@ -37,17 +37,17 @@
             <div class="container">
                 <div class="row container">
                     <div class="col-12 col-md-6 align-self-center">
-                        <h1 class="h1 py-5">Wir helfen dir beim Kauf von Immobilien.</h1>
-                        <p class="p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur nemo
+                        <h1 class="h1 pt-3">Wir helfen dir beim Kauf von Immobilien.</h1>
+                        <p class="p py-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur nemo
                             quasi
                             temporibus quibusdam dolores possimus praesentium placeat eius facere aperiam non enim vero
                             mollitia voluptatibus quis, eaque sunt veritatis voluptas obcaecati! Voluptatem debitis
                             dolorum exercitationem eaque. Ullam amet nemo odio illo, sunt autem dignissimos aut magni,
                             deserunt eligendi recusandae.</p>
-                        <button class="btn btn-primary btn-outline-dark my-5">Jetzt kostenlos anfragen</button>
+                        <button class="btn btn-primary btn-outline-dark mb-3">Jetzt kostenlos anfragen</button>
                     </div>
                     <div class="col-6 align-self-center">
-                        <img src="./images/ethan-cull-5Aknas0Jls4-unsplash.jpg" class="img-fluid shadow-lg rounded-5 hide-till-md" style="max-height: 50%;"
+                        <img src="./images/ethan-cull-5Aknas0Jls4-unsplash.jpg" class="img-fluid shadow-lg rounded-5 my-2 my-lg-5 hide-till-md"
                             alt="">
                     </div>
                 </div>
